# hello-rust

./: Cargo.toml  Dockerfile  Dockerfile2  README.MD
.github/workflows/: rust.yml
src/: main.rs
