[package]
name = "hello-rust"
version = "0.1.0"
authors = ["larry.chen <chen.gx@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ferris-says = "0.2"
tokio = { version = "0.2", features = ["macros", "rt-threaded"] }
warp = "0.2"